--- a/2016-05-11/source/MTL/ENG/728x90.css
+++ b/2016-05-11/source/MTL/ENG/728x90.css
@@ -615,8 +615,8 @@
 }
 
 .background {
-  width: 295px;
-  height: 116px;
+  width: 245px;
+  height: 83px;
   background: url('./images/728x90_background.png') no-repeat center center;
   top: 0px;
   left: 0px;
@@ -635,11 +635,11 @@
   animation: rollBack 10ms ease-in-out 0s forwards;
 }
 .car-1-outside {
-  -webkit-animation: fadeOut 0.5s ease-in-out 5s forwards;
-  -moz-animation: fadeOut 0.5s ease-in-out 5s forwards;
-  -ms-animation: fadeOut 0.5s ease-in-out 5s forwards;
-  -o-animation: fadeOut 0.5s ease-in-out 5s forwards;
-  animation: fadeOut 0.5s ease-in-out 5s forwards; 
+  -webkit-animation: fadeOut 0.5s ease-in-out 6s forwards;
+  -moz-animation: fadeOut 0.5s ease-in-out 6s forwards;
+  -ms-animation: fadeOut 0.5s ease-in-out 6s forwards;
+  -o-animation: fadeOut 0.5s ease-in-out 6s forwards;
+  animation: fadeOut 0.5s ease-in-out 6s forwards; 
 }
 .car-1-wrapper {
   opacity: 0;
@@ -660,11 +660,11 @@
   transform: rotate(-3deg);
 }
 .car {
-  width: 268px;
-  height: 130px;
+  width: 191px;
+  height: 93px;
   background: url('./images/728x90_car_1.png') no-repeat center center;
-  top: 26px;
-  left: -14px;
+  top: -4px;
+  left: 20px;
 
   -webkit-transform: translate(-728px,-50px);
   -moz-transform: translate(-728px,-50px);
@@ -697,40 +697,40 @@
   animation: fadeOut 10ms ease-in-out 4s forwards; 
 }
 .front-wheel-container, .front-wheel-2-container {
-  width: 34px;
-  height: 53px;
-  top: 50px;
-  left: 114px;
+  width: 24px;
+  height: 37px;
+  top: 37px;
+  left: 80px;
 
-  -webkit-transform: scaleX(0.6415);
-  -moz-transform: scaleX(0.6415);
-  -ms-transform: scaleX(0.6415);
-  transform: scaleX(0.6415);
+  -webkit-transform: scaleX(0.6486);
+  -moz-transform: scaleX(0.6486);
+  -ms-transform: scaleX(0.6486);
+  transform: scaleX(0.6486);
 }
 .front-wheel, .front-wheel-2 {
-  width: 53px;
-  height: 53px;
+  width: 37px;
+  height: 37px;
   background: url('./images/728x90_wheel_front.png') no-repeat center center;
-  background-size: 53px 53px;
+  background-size: 37px 37px;
   top: 0px;
   left: 0px;
 }
 .back-wheel-container, .back-wheel-2-container {
-  width: 19px;
-  height: 40px;
-  top: 45px;
-  left: 28px;
+  width: 14px;
+  height: 29px;
+  top: 34px;
+  left: 20px;
 
-  -webkit-transform: scaleX(0.475);
-  -moz-transform: scaleX(0.475);
-  -ms-transform: scaleX(0.475);
-  transform: scaleX(0.475);
+  -webkit-transform: scaleX(0.4828);
+  -moz-transform: scaleX(0.4828);
+  -ms-transform: scaleX(0.4828);
+  transform: scaleX(0.4828);
 }
 .back-wheel, .back-wheel-2 {
-  width: 40px;
-  height: 40px;
+  width: 29px;
+  height: 29px;
   background: url('./images/728x90_wheel_back.png') no-repeat center center;
-  background-size: 40px 40px;
+  background-size: 29px 29px;
   top: 0px;
   left: 0px;
 }
@@ -742,12 +742,25 @@
   animation: wheelRotationAnimation 1.5s ease-in-out 2.5s forwards;
 }
 
+.car-2-container {
+  -webkit-transform: translate(728px,50px);
+  -moz-transform: translate(728px,50px);
+  -ms-transform: translate(728px,50px);
+  -o-transform: translate(728px,50px);
+  transform: translate(728px,50px);
+
+  -webkit-animation: rollBack 10ms ease-in-out 0s forwards;
+  -moz-animation: rollBack 10ms ease-in-out 0s forwards;
+  -ms-animation: rollBack 10ms ease-in-out 0s forwards;
+  -o-animation: rollBack 10ms ease-in-out 0s forwards;
+  animation: rollBack 10ms ease-in-out 0s forwards;
+}
 .car-2 {
-  width: 253px;
-  height: 122px;
+  width: 165px;
+  height: 77px;
   background: url('./images/728x90_car_2.png') no-repeat center center;
-  top: 18px;
-  left: 3px;
+  top: 8px;
+  left: 51px;
 
   -webkit-transform: translate(-728px,-50px);
   -moz-transform: translate(-728px,-50px);
@@ -755,33 +768,33 @@
   -o-transform: translate(-728px,-50px);
   transform: translate(-728px,-50px);
 
-  -webkit-animation: carRunAnimation 1.5s ease-in-out 5.5s forwards;
-  -moz-animation: carRunAnimation 1.5s ease-in-out 5.5s forwards;
-  -ms-animation: carRunAnimation 1.5s ease-in-out 5.5s forwards;
-  -o-animation: carRunAnimation 1.5s ease-in-out 5.5s forwards;
-  animation: carRunAnimation 1.5s ease-in-out 5.5s forwards;
+  -webkit-animation: carRunAnimation 1.5s ease-in-out 6.5s forwards;
+  -moz-animation: carRunAnimation 1.5s ease-in-out 6.5s forwards;
+  -ms-animation: carRunAnimation 1.5s ease-in-out 6.5s forwards;
+  -o-animation: carRunAnimation 1.5s ease-in-out 6.5s forwards;
+  animation: carRunAnimation 1.5s ease-in-out 6.5s forwards;
 }
 .wheel-container-2 {
-  -webkit-animation: fadeOut 10ms ease-in-out 7s forwards;
-  -moz-animation: fadeOut 10ms ease-in-out 7s forwards;
-  -ms-animation: fadeOut 10ms ease-in-out 7s forwards;
-  -o-animation: fadeOut 10ms ease-in-out 7s forwards;
-  animation: fadeOut 10ms ease-in-out 7s forwards; 
+  -webkit-animation: fadeOut 10ms ease-in-out 8s forwards;
+  -moz-animation: fadeOut 10ms ease-in-out 8s forwards;
+  -ms-animation: fadeOut 10ms ease-in-out 8s forwards;
+  -o-animation: fadeOut 10ms ease-in-out 8s forwards;
+  animation: fadeOut 10ms ease-in-out 8s forwards; 
 }
 .front-wheel-2-container {
-  top: 59px;
-  left: 90px;
+  top: 37px;
+  left: 58px;
 }
 .back-wheel-2-container {
-  top: 56px;
-  left: 10px;
+  top: 36px;
+  left: 4px;
 }
 .back-wheel-2, .front-wheel-2 {
-  -webkit-animation: wheelRotationAnimation 1.5s ease-in-out 5.5s forwards;
-  -moz-animation: wheelRotationAnimation 1.5s ease-in-out 5.5s forwards;
-  -ms-animation: wheelRotationAnimation 1.5s ease-in-out 5.5s forwards;
-  -o-animation: wheelRotationAnimation 1.5s ease-in-out 5.5s forwards;
-  animation: wheelRotationAnimation 1.5s ease-in-out 5.5s forwards;
+  -webkit-animation: wheelRotationAnimation 1.5s ease-in-out 6.5s forwards;
+  -moz-animation: wheelRotationAnimation 1.5s ease-in-out 6.5s forwards;
+  -ms-animation: wheelRotationAnimation 1.5s ease-in-out 6.5s forwards;
+  -o-animation: wheelRotationAnimation 1.5s ease-in-out 6.5s forwards;
+  animation: wheelRotationAnimation 1.5s ease-in-out 6.5s forwards;
 }
 
 .text-container {
@@ -798,11 +811,11 @@
   animation: rollBack 10ms ease-in-out 0s forwards;
 }
 .text {
-  width: 261px;
-  height: 12px;
+  width: 245px;
+  height: 39px;
   background: url('./images/728x90_text.png') no-repeat center center;
-  top: 142px;
-  left: 14px;
+  top: 26px;
+  left: 270px;
 
   -webkit-transform: translate(-728px,0);
   -moz-transform: translate(-728px,0);
@@ -810,11 +823,11 @@
   -o-transform: translate(-728px,0);
   transform: translate(-728px,0);
 
-  -webkit-animation: fadeIn 1s ease-in-out 7s forwards;
-  -moz-animation: fadeIn 1s ease-in-out 7s forwards;
-  -ms-animation: fadeIn 1s ease-in-out 7s forwards;
-  -o-animation: fadeIn 1s ease-in-out 7s forwards;
-  animation: fadeIn 1s ease-in-out 7s forwards;
+  -webkit-animation: fadeIn 1s ease-in-out 8s forwards;
+  -moz-animation: fadeIn 1s ease-in-out 8s forwards;
+  -ms-animation: fadeIn 1s ease-in-out 8s forwards;
+  -o-animation: fadeIn 1s ease-in-out 8s forwards;
+  animation: fadeIn 1s ease-in-out 8s forwards;
 }
 .logo-container {
   -webkit-transform: translate(728px,0);
@@ -830,10 +843,10 @@
   animation: rollBack 10ms ease-in-out 0s forwards;
 }
 .logo {
-  width: 156px;
-  height: 19px;
+  width: 164px;
+  height: 20px;
   background: url('./images/728x90_logo.png') no-repeat center center;
-  top: 163px;
+  top: 10px;
   right: 10px;
 
   -webkit-transform: translate(-728px,0);
@@ -842,18 +855,25 @@
   -o-transform: translate(-728px,0);
   transform: translate(-728px,0);
 
-  -webkit-animation: fadeIn 1s ease-in-out 8s forwards;
-  -moz-animation: fadeIn 1s ease-in-out 8s forwards;
-  -ms-animation: fadeIn 1s ease-in-out 8s forwards;
-  -o-animation: fadeIn 1s ease-in-out 8s forwards;
-  animation: fadeIn 1s ease-in-out 8s forwards;
+  -webkit-animation: fadeIn 1s ease-in-out 9s forwards;
+  -moz-animation: fadeIn 1s ease-in-out 9s forwards;
+  -ms-animation: fadeIn 1s ease-in-out 9s forwards;
+  -o-animation: fadeIn 1s ease-in-out 9s forwards;
+  animation: fadeIn 1s ease-in-out 9s forwards;
+}
+.cta-wrapper {
+  -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
+  -moz-animation: hideContent 10ms ease-in-out 0s forwards;
+  -ms-animation: hideContent 10ms ease-in-out 0s forwards;
+  -o-animation: hideContent 10ms ease-in-out 0s forwards;
+  animation: hideContent 10ms ease-in-out 0s forwards;  
 }
 .cta-container {
-  -webkit-transform: translate(728px,0);
-  -moz-transform: translate(728px,0);
-  -ms-transform: translate(728px,0);
-  -o-transform: translate(728px,0);
-  transform: translate(728px,0);
+  -webkit-transform: translate(-728px,0);
+  -moz-transform: translate(-728px,0);
+  -ms-transform: translate(-728px,0);
+  -o-transform: translate(-728px,0);
+  transform: translate(-728px,0);
 
   -webkit-animation: rollBack 10ms ease-in-out 0s forwards;
   -moz-animation: rollBack 10ms ease-in-out 0s forwards;
@@ -862,22 +882,26 @@
   animation: rollBack 10ms ease-in-out 0s forwards;
 }
 .cta {
-  width: 291px;
-  height: 55px;
+  width: 134px;
+  height: 28px;
   background: url('./images/728x90_cta.png') no-repeat center center;
-  bottom: 5px;
-  left: 5px;
+  bottom: 10px;
+  right: 10px;
 
-  -webkit-transform: translate(-728px,0);
-  -moz-transform: translate(-728px,0);
-  -ms-transform: translate(-728px,0);
-  -o-transform: translate(-728px,0);
-  transform: translate(-728px,0);
+  -webkit-transform: translate(728px,0);
+  -moz-transform: translate(728px,0);
+  -ms-transform: translate(728px,0);
+  -o-transform: translate(728px,0);
+  transform: translate(728px,0);
 
-  -webkit-animation: slideRight 0.5s ease-in-out 9s forwards;
-  -moz-animation: slideRight 0.5s ease-in-out 9s forwards;
-  -ms-animation: slideRight 0.5s ease-in-out 9s forwards;
-  -o-animation: slideRight 0.5s ease-in-out 9s forwards;
-  animation: slideRight 0.5s ease-in-out 9s forwards;
+  -webkit-animation: slideLeft2 0.5s ease-in-out 10s forwards;
+  -moz-animation: slideLeft2 0.5s ease-in-out 10s forwards;
+  -ms-animation: slideLeft2 0.5s ease-in-out 10s forwards;
+  -o-animation: slideLeft2 0.5s ease-in-out 10s forwards;
+  animation: slideLeft2 0.5s ease-in-out 10s forwards;
 }
 
+.border {
+  z-index: 100;
+  background: url('./images/728x90_border.png') no-repeat center center;
+}
