--- a/2016-05-11/source/VAN/728x90.css
+++ b/2016-05-11/source/VAN/728x90.css
@@ -696,7 +696,7 @@
   -o-animation: fadeOut 10ms ease-in-out 4s forwards;
   animation: fadeOut 10ms ease-in-out 4s forwards; 
 }
-.front-wheel-container, .front-wheel-2-container {
+.front-wheel-container, .front-wheel-2-container, .front-wheel-3-container {
   width: 24px;
   height: 37px;
   top: 37px;
@@ -707,7 +707,7 @@
   -ms-transform: scaleX(0.6486);
   transform: scaleX(0.6486);
 }
-.front-wheel, .front-wheel-2 {
+.front-wheel, .front-wheel-2, .front-wheel-3 {
   width: 37px;
   height: 37px;
   background: url('./images/728x90_wheel_front.png') no-repeat center center;
@@ -715,7 +715,7 @@
   top: 0px;
   left: 0px;
 }
-.back-wheel-container, .back-wheel-2-container {
+.back-wheel-container, .back-wheel-2-container, .back-wheel-3-container {
   width: 14px;
   height: 29px;
   top: 34px;
@@ -726,7 +726,7 @@
   -ms-transform: scaleX(0.4828);
   transform: scaleX(0.4828);
 }
-.back-wheel, .back-wheel-2 {
+.back-wheel, .back-wheel-2, .back-wheel-3  {
   width: 29px;
   height: 29px;
   background: url('./images/728x90_wheel_back.png') no-repeat center center;
@@ -742,6 +742,13 @@
   animation: wheelRotationAnimation 1.5s ease-in-out 2.5s forwards;
 }
 
+.car-2-outside {
+  -webkit-animation: fadeOut 0.5s ease-in-out 10s forwards;
+  -moz-animation: fadeOut 0.5s ease-in-out 10s forwards;
+  -ms-animation: fadeOut 0.5s ease-in-out 10s forwards;
+  -o-animation: fadeOut 0.5s ease-in-out 10s forwards;
+  animation: fadeOut 0.5s ease-in-out 10s forwards;
+}
 .car-2-container {
   -webkit-transform: translate(728px,50px);
   -moz-transform: translate(728px,50px);
@@ -797,6 +804,64 @@
   animation: wheelRotationAnimation 1.5s ease-in-out 6.5s forwards;
 }
 
+
+
+.car-3-container {
+  -webkit-transform: translate(728px,50px);
+  -moz-transform: translate(728px,50px);
+  -ms-transform: translate(728px,50px);
+  -o-transform: translate(728px,50px);
+  transform: translate(728px,50px);
+
+  -webkit-animation: rollBack 10ms ease-in-out 0s forwards;
+  -moz-animation: rollBack 10ms ease-in-out 0s forwards;
+  -ms-animation: rollBack 10ms ease-in-out 0s forwards;
+  -o-animation: rollBack 10ms ease-in-out 0s forwards;
+  animation: rollBack 10ms ease-in-out 0s forwards;
+}
+.car-3 {
+  width: 182px;
+  height: 77px;
+  background: url('./images/728x90_car_3.png') no-repeat center center;
+  top: 8px;
+  left: 30px;
+
+  -webkit-transform: translate(-728px,-50px);
+  -moz-transform: translate(-728px,-50px);
+  -ms-transform: translate(-728px,-50px);
+  -o-transform: translate(-728px,-50px);
+  transform: translate(-728px,-50px);
+
+  -webkit-animation: carRunAnimation 1.5s ease-in-out 10.5s forwards;
+  -moz-animation: carRunAnimation 1.5s ease-in-out 10.5s forwards;
+  -ms-animation: carRunAnimation 1.5s ease-in-out 10.5s forwards;
+  -o-animation: carRunAnimation 1.5s ease-in-out 10.5s forwards;
+  animation: carRunAnimation 1.5s ease-in-out 10.5s forwards;
+}
+.wheel-container-3 {
+  -webkit-animation: fadeOut 10ms ease-in-out 12s forwards;
+  -moz-animation: fadeOut 10ms ease-in-out 12s forwards;
+  -ms-animation: fadeOut 10ms ease-in-out 12s forwards;
+  -o-animation: fadeOut 10ms ease-in-out 12s forwards;
+  animation: fadeOut 10ms ease-in-out 12s forwards;
+}
+.front-wheel-3-container {
+  top: 34px;
+  left: 65px;
+}
+.back-wheel-3-container {
+  top: 32px;
+  left: 6px;
+}
+.back-wheel-3, .front-wheel-3 {
+  -webkit-animation: wheelRotationAnimation 1.5s ease-in-out 10.5s forwards;
+  -moz-animation: wheelRotationAnimation 1.5s ease-in-out 10.5s forwards;
+  -ms-animation: wheelRotationAnimation 1.5s ease-in-out 10.5s forwards;
+  -o-animation: wheelRotationAnimation 1.5s ease-in-out 10.5s forwards;
+  animation: wheelRotationAnimation 1.5s ease-in-out 10.5s forwards;
+}
+
+
 .text-container {
   -webkit-transform: translate(728px,0);
   -moz-transform: translate(728px,0);
@@ -823,11 +888,11 @@
   -o-transform: translate(-728px,0);
   transform: translate(-728px,0);
 
-  -webkit-animation: fadeIn 1s ease-in-out 8s forwards;
-  -moz-animation: fadeIn 1s ease-in-out 8s forwards;
-  -ms-animation: fadeIn 1s ease-in-out 8s forwards;
-  -o-animation: fadeIn 1s ease-in-out 8s forwards;
-  animation: fadeIn 1s ease-in-out 8s forwards;
+  -webkit-animation: fadeIn 1s ease-in-out 12s forwards;
+  -moz-animation: fadeIn 1s ease-in-out 12s forwards;
+  -ms-animation: fadeIn 1s ease-in-out 12s forwards;
+  -o-animation: fadeIn 1s ease-in-out 12s forwards;
+  animation: fadeIn 1s ease-in-out 12s forwards;
 }
 .logo-container {
   -webkit-transform: translate(728px,0);
@@ -855,11 +920,11 @@
   -o-transform: translate(-728px,0);
   transform: translate(-728px,0);
 
-  -webkit-animation: fadeIn 1s ease-in-out 9s forwards;
-  -moz-animation: fadeIn 1s ease-in-out 9s forwards;
-  -ms-animation: fadeIn 1s ease-in-out 9s forwards;
-  -o-animation: fadeIn 1s ease-in-out 9s forwards;
-  animation: fadeIn 1s ease-in-out 9s forwards;
+  -webkit-animation: fadeIn 1s ease-in-out 13s forwards;
+  -moz-animation: fadeIn 1s ease-in-out 13s forwards;
+  -ms-animation: fadeIn 1s ease-in-out 13s forwards;
+  -o-animation: fadeIn 1s ease-in-out 13s forwards;
+  animation: fadeIn 1s ease-in-out 13s forwards;
 }
 .cta-wrapper {
   -webkit-animation: hideContent 10ms ease-in-out 0s forwards;
@@ -894,11 +959,11 @@
   -o-transform: translate(728px,0);
   transform: translate(728px,0);
 
-  -webkit-animation: slideLeft2 0.5s ease-in-out 10s forwards;
-  -moz-animation: slideLeft2 0.5s ease-in-out 10s forwards;
-  -ms-animation: slideLeft2 0.5s ease-in-out 10s forwards;
-  -o-animation: slideLeft2 0.5s ease-in-out 10s forwards;
-  animation: slideLeft2 0.5s ease-in-out 10s forwards;
+  -webkit-animation: slideLeft2 0.5s ease-in-out 14s forwards;
+  -moz-animation: slideLeft2 0.5s ease-in-out 14s forwards;
+  -ms-animation: slideLeft2 0.5s ease-in-out 14s forwards;
+  -o-animation: slideLeft2 0.5s ease-in-out 14s forwards;
+  animation: slideLeft2 0.5s ease-in-out 14s forwards;
 }
 
 .border {
